[package]
name = "bloom-filter"
version = "0.1.0"
authors = ["Helge Wrede <helge.wrede@protonmail.com>", "Alexander Schultheiß <alexanderschultheiss@pm.me>", "Lukas Simon <lukas.b.simon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
murmur3 = "0.5.1"
ahash = { version = "0.5.6", default-features = false }

[dev-dependencies]
fnv = "1.0.7"
xxhash-rust = { version = "0.8.0-beta.3", features = ["xxh3"] }
rand = "0.7.3"
bloomfilter = "1.0.3"
