[package]
name = "bloom_filter_simple"
version = "0.1.0"
authors = ["Helge Wrede <helge.wrede@protonmail.com>", "Alexander Schultheiß <alexanderschultheiss@pm.me>", "Lukas Simon <lukas.b.simon@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A simple and generic bloom filter implementation."
keywords = ["bloom", "filter", "bloomfilter", "bloom-filter"]
categories = ["algorithms", "data-structures"]
homepage = "http://devoidware.com"
repository = "https://github.com/devoidware/bloom_filter_simple"

[dependencies]
ahash = { version = "0.6.1", default-features = false }

[dev-dependencies]
fnv = "1.0.7"
xxhash-rust = { version = "0.8.0-beta.3", features = ["xxh3"] }
rand = "0.7.3"
